# local-img-organizer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: example_cfg.yaml
docs/: todo.md
src/local_img_organizer/: __init__.py  classification.py  config.py  interfaces.py
tests/: test_config.py  test_interfaces.py
